# project-kt3

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  SECURITY.md  cors.json  cors.xml  deploy_frontends.sh  docker-compose.yaml  nginx.conf  plan.md  setup_keti3.sql
.windsurf/rules/: project-kt3.md
backend/: .env  .env.development  .env.production  db_mysql.py  keti3_middleware.py  keti3_storage.py  main.py  pyproject.toml  requirements.txt
backend/scripts/: init_db.py  migrate_passwords.py  test_auth.py  test_minio.py  test_security.py
certs/: server.crt  server.key
deploy/: DEPLOYMENT_GUIDE.md  build-and-deploy.sh  local-deploy.sh  verify-deployment.sh
deploy/env-templates/: backend.env.production  frontend.env.production  sub_frontend.env.production
deploy/nginx/: README.md  kt3.conf  project-kt3-production.conf  project-kt3-sslip.conf
deploy/scripts/: deploy.sh
deploy/systemd/: kt3-backend.service
frontend/: .env.development  .env.production  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ProtectedRoute.tsx  ThirdPartyApp.tsx  TwentyFourGame.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AutTest.tsx  (+8 more)
sub_project/: Makefile
sub_project/sub_backend/: python-backend-refactor.md
sub_project/sub_frontend/: .env.development  .env.prod  .env.production  .env.test  .eslintrc.cjs  README.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1758771569334-96638c21a2a4d.mjs  项目使用文档.md
(+191 files in other folders)
