[project]
name = "project-kt3-backend"
version = "0.1.0"
description = "FastAPI backend for project-kt3"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "PyJWT==2.8.0",
    "pandas==2.1.4",
    "python-dateutil==2.8.2",
    "APScheduler==3.10.4",
    "motor==3.5.1",
    "pymongo==4.6.3",
    "minio==7.2.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "cryptography==41.0.7",
    "Pillow==10.0.0",
    "bcrypt==4.1.2",
]
